--- a/index.html
+++ b/index.html
@@ -1,87 +1,187 @@
 <!DOCTYPE html>
 <html lang="ms">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Malaysia Badminton Highlight – Hari Ini!</title>
+  <meta charset="UTF-8" />
+  <title>Malaysia Badminton Highlight – Hari Ini</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- 基础样式：蓝色渐变背景 + 白色卡片 -->
+  <!-- 基本说明（给 FB / SEO 用） -->
+  <meta name="description" content="Semak highlight & data badminton Malaysia hari ini – jadual, keputusan & prestasi pemain terkini. Klik untuk akses penuh. 马来西亚羽毛球今日焦点，一键查看完整数据。" />
+
+  <!-- 简单干净的样式 -->
   <style>
-    body {
+    * {
+      box-sizing: border-box;
       margin: 0;
       padding: 0;
-      font-family: Arial, sans-serif;
-      background: linear-gradient(135deg, #007BFF, #38B6FF);
-      color: #333;
     }
-    .container {
+    body {
+      font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", sans-serif;
+      min-height: 100vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background: linear-gradient(135deg, #0a7bff, #3b8dff);
+      color: #222;
+    }
+    .card {
+      background: #ffffff;
       max-width: 480px;
-      background: #FFFFFF;
-      margin: 40px auto;
-      padding: 30px 24px;
+      width: 92%;
       border-radius: 28px;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.12);
+      box-shadow: 0 20px 45px rgba(0, 0, 0, 0.25);
+      padding: 28px 24px 26px;
+      text-align: left;
+    }
+    .badge {
+      display: inline-flex;
+      align-items: center;
+      gap: 8px;
+      font-size: 14px;
+      font-weight: 600;
+      color: #fb8c00;
+      background: rgba(255, 152, 0, 0.12);
+      padding: 4px 10px;
+      border-radius: 999px;
+      margin-bottom: 12px;
+    }
+    .badge span {
+      font-size: 16px;
     }
     h1 {
-      font-size: 28px;
-      font-weight: 700;
+      font-size: 26px;
       line-height: 1.3;
-      margin-top: 0;
-      margin-bottom: 16px;
+      font-weight: 800;
+      color: #202124;
+      margin-bottom: 12px;
     }
-    p {
-      font-size: 16px;
-      line-height: 1.6;
-      margin: 0 0 12px 0;
-    }
-    .button {
+    h1 span {
       display: block;
-      width: 100%;
-      padding: 14px 0;
-      background: #007BFF;
-      color: #FFFFFF;
-      text-align: center;
-      border-radius: 10px;
-      font-size: 17px;
-      font-weight: 600;
-      margin-top: 18px;
-      text-decoration: none;
     }
-    .button:hover {
-      background: #005FCC;
+    .subheading {
+      font-size: 14px;
+      color: #666;
+      margin-bottom: 14px;
+    }
+    .subheading-cn {
+      font-size: 13px;
+      color: #777;
+      margin-bottom: 18px;
+    }
+    .list {
+      font-size: 14px;
+      color: #444;
+      margin-bottom: 20px;
+    }
+    .list li {
+      margin-left: 1.1em;
+      margin-bottom: 4px;
+    }
+    .list li::marker {
+      color: #0a7bff;
+    }
+    .cta-btn {
+      width: 100%;
+      border: none;
+      border-radius: 999px;
+      padding: 14px 18px;
+      background: #0a7bff;
+      color: #ffffff;
+      font-size: 15px;
+      font-weight: 700;
+      cursor: pointer;
+      box-shadow: 0 10px 20px rgba(10, 123, 255, 0.35);
+      transition: transform 0.12s ease, box-shadow 0.12s ease, background 0.12s ease;
+    }
+    .cta-btn span {
+      display: block;
+      line-height: 1.3;
+    }
+    .cta-btn small {
+      font-size: 12px;
+      opacity: 0.9;
+    }
+    .cta-btn:hover {
+      background: #0069e6;
+      transform: translateY(-1px);
+      box-shadow: 0 14px 26px rgba(10, 123, 255, 0.45);
+    }
+    .cta-btn:active {
+      transform: translateY(0);
+      box-shadow: 0 8px 16px rgba(10, 123, 255, 0.3);
     }
     .note {
-      font-size: 12px;
-      color: #888;
       margin-top: 10px;
+      font-size: 11px;
+      line-height: 1.45;
+      color: #888;
       text-align: center;
     }
+    @media (max-width: 480px) {
+      .card {
+        padding: 22px 18px 20px;
+        border-radius: 24px;
+      }
+      h1 {
+        font-size: 22px;
+      }
+    }
   </style>
-
-  <!-- 2 秒后自动跳转到 Affiliate（可保留/可删掉） -->
-  <script>
-    setTimeout(function () {
-      window.location.href = "https://go.nova88105.net/promotion/63998/en/facebook/index.html";
-    }, 2000);
-  </script>
 </head>
-
 <body>
-  <div class="container">
-    <h1>🔥 MALAYSIA BADMINTON HIGHLIGHT – HARI INI! 🏸</h1>
+  <main class="card">
+    <div class="badge">
+      <span>🔥</span> Malaysia Badminton Highlight
+    </div>
 
-    <p>Semak perlawanan badminton paling hangat hari ini – jadual, keputusan &amp; prestasi terkini pemain.</p>
+    <h1>
+      <span>MALAYSIA BADMINTON</span>
+      <span>HIGHLIGHT – HARI INI! 🏸</span>
+    </h1>
 
-    <p>Klik butang di bawah untuk akses penuh.</p>
+    <!-- 马来文简介 -->
+    <p class="subheading">
+      Semak perlawanan badminton paling hangat hari ini – jadual, keputusan & prestasi pemain terkini untuk Malaysia dan perlawanan pilihan.
+    </p>
 
-    <a href="https://go.nova88105.net/promotion/63998/en/facebook/index.html"
-       class="button">
-      Lihat Data Penuh Badminton Hari Ini
-    </a>
+    <!-- 华语简介 -->
+    <p class="subheading-cn">
+      想看<b>今天马来西亚羽毛球最新赛程 / 比分 / 球员表现</b>？  
+      这里帮你整理重点，一键跳转到完整数据页面。
+    </p>
+
+    <ul class="list">
+      <li>Jadual & keputusan live untuk perlawanan penting</li>
+      <li>Highlight pemain Malaysia & aksi tumpuan</li>
+      <li>Senang untuk rakan kongsi & pemain buat rujukan pantas</li>
+    </ul>
+
+    <button id="cta-button" class="cta-btn">
+      <span>LIHAT DATA PENUH BADMINTON HARI INI</span>
+      <small>查看今天羽毛球完整数据 ➜</small>
+    </button>
 
     <p class="note">
-      *Halaman ini hanya memaparkan info badminton dan akan membawa anda ke laman penuh selepas beberapa saat.
+      *Halaman ini hanya memaparkan info badminton dan akan membawa anda ke laman penuh rakan kongsi kami selepas anda klik butang di atas.<br />
+      *本页面只整理羽毛球相关资讯。点击上方按钮后，将带你前往我们的合作伙伴官网查看完整内容。
     </p>
-  </div>
+  </main>
+
+  <script>
+    // 目标 Affiliate 链接
+    const TARGET_URL = "https://go.nova88105.net/promotion/63998/en/facebook/index.html";
+
+    // 按钮点击后跳转
+    document.getElementById("cta-button").addEventListener("click", function () {
+      window.location.href = TARGET_URL;
+    });
+
+    // （可选）自动跳转：如果你以后想要 3 秒后自动跳转，可以把下面三行取消注释
+    /*
+    setTimeout(function () {
+      window.location.href = TARGET_URL;
+    }, 3000);
+    */
+  </script>
 </body>
 </html>
