--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>今日大马羽球赛程 & 比分 | Malaysia Badminton Highlight</title>
   <meta name="description" content="查看今日马来西亚羽球赛程、比分、赛果与重点球员表现。Jadual & keputusan badminton Malaysia hari ini – semua di satu tempat." />
 
-  <!-- 提前握手 Nova88 网址，加快之后跳转速度（把域名换成你真实的 affiliate 域名） -->
+  <!-- 提前握手 Nova88 网址，加快之后跳转速度 -->
   <link rel="preconnect" href="https://www.nova88105.net" />
 
   <style>
@@ -19,7 +19,6 @@
       --text-main: #111827;
       --text-sub: #4b5563;
       --badge-bg: rgba(255, 255, 255, 0.9);
-      --danger: #ef4444;
       --radius-xl: 26px;
       --shadow-xl: 0 26px 60px rgba(15, 23, 42, 0.35);
     }
@@ -77,7 +76,24 @@
       font-size: 13px;
       color: var(--text-sub);
       line-height: 1.5;
-      margin-bottom: 16px;
+      margin-bottom: 12px;
+    }
+
+    /* ✅ 新会员五大福利图片 */
+    .bonus-img {
+      width: 100%;
+      max-width: 420px;
+      display: block;
+      margin: 6px auto 4px;
+      border-radius: 18px;
+      box-shadow: 0 18px 40px rgba(15, 23, 42, 0.35);
+    }
+
+    .bonus-caption {
+      font-size: 12px;
+      color: #6b7280;
+      text-align: center;
+      margin-bottom: 14px;
     }
 
     .highlight-box {
@@ -136,11 +152,13 @@
       box-shadow: 0 12px 26px rgba(37, 99, 235, 0.45);
       transition: transform 0.08s ease, box-shadow 0.08s ease,
         filter 0.06s ease;
+      text-decoration: none;
     }
 
     .btn-main span {
-      margin-left: 4px;
       font-size: 14px;
+      line-height: 1.4;
+      text-align: center;
     }
 
     .btn-main:hover {
@@ -199,6 +217,16 @@
       Jadual & keputusan badminton Malaysia – semua di satu tempat.
     </p>
 
+    <!-- ✅ 新会员五大福利 Banner 图 -->
+    <img
+      src="nova88-bonus.png"
+      alt="Nova88 新会员五大福利"
+      class="bonus-img"
+    />
+    <p class="bonus-caption">
+      新会员五大福利：150% Sportsbook、88% Live Casino、100% Slot、288% Slot 以及 88% E-Sports Welcome Bonus
+    </p>
+
     <section class="highlight-box" aria-label="Today focus match">
       <div class="highlight-title">
         🎯 今日焦点赛 / Perlawanan Tumpuan Hari Ini
@@ -215,28 +243,29 @@
       <li>✔ 今日赛程、场次、开始时间</li>
       <li>✔ 实时比分 & 赛果（live & final result）</li>
       <li>✔ 大马球员表现一览 | Highlight pemain Malaysia</li>
+      <li>✔ 新会员可同时领取 5 大欢迎奖励</li>
       <li>✔ 方便分享给朋友 / 群组 – senang untuk share</li>
     </ul>
 
     <div class="btn-wrap">
-      <!-- ✅ 把下面 href 改成你的 Nova88 Affiliate 链接 -->
-<a 
-  class="btn-main"
-  href="https://www.nova88105.net/en/promotion?affCode=63998&clickId=1220026"
-  target="_blank"
-  rel="noopener noreferrer"
->
-    <span>
-        今日赛程 & 比分（打开即可查看）｜ Mahu tengok keputusan Malaysia sekarang? Klik sini →
-    </span>
-</a>
-
+      <!-- ✅ 这里是你的 Nova88 Affiliate 链接，保持不变就可以 -->
+      <a
+        class="btn-main"
+        href="https://www.nova88105.net/en/promotion?affCode=63998&clickId=1220026"
+        target="_blank"
+        rel="noopener noreferrer"
+      >
+        <span>
+          今日赛程 & 比分 + 新会员五大福利<br />
+          Mahu tengok keputusan Malaysia & claim bonus? Klik sini →
+        </span>
+      </a>
     </div>
 
     <p class="note">
-      本页面只整理羽球资讯，点击按钮后将带你前往合作体育平台查看完整数据。<br />
+      本页面只整理羽球资讯，点击按钮后将带你前往合作体育平台查看完整数据与优惠详情。<br />
       Halaman ini hanya susun info badminton. Butang di atas akan
-      bawa anda ke laman rakan kongsi kami untuk data penuh.
+      bawa anda ke laman rakan kongsi kami untuk data penuh & promosi.
     </p>
 
     <p class="footer-text">
