--- a/bonus.html
+++ b/bonus.html
@@ -142,7 +142,7 @@
   <script>
     function goToAffiliate() {
       // ⚠️ 这里换成你的 Nova88 Affiliate 链接
-      var url = "https://badmintonmeet.github.io/badminton-landing/bonus.html";
+      var url = "https://www.nova88105.net/en/promotion?affCode=63998&clickId=1220026";
       window.location.href = url;
     }
   </script>
